artifacthub/library/pod-security-policy/host-process/1.0.1/samples/psp-host-process/disallowed_init.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-host-process-disallowed
  labels:
    app: nginx-host-process
spec:
  containers:
  - name: nginx
    image: nginx
