artifacthub/library/pod-security-policy/host-process/1.0.1/samples/psp-host-process/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPHostProcess
metadata:
  name: psp-host-process
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
